ecmascript/parser/tests/test262-error-references/fail/0ddab4a1a651034c.js.stderr
error: Expected ;, got )
 --> $DIR/tests/test262-parser/fail/0ddab4a1a651034c.js:1:24
  |
1 | for (let x = 42 in list) process(x);
  |                        ^

